--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
       </nav>
       <ul class="social_item">
         <li class="social_list">
-          <a class="nav_social" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li class="social_list">
-        <li>
-          <a class="nav_social" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="nav_social mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="social_list">
+          <a class="nav_social tel" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </div>
   </header>
   <main>
     <section class="hero">
-      <div class="container cont_hero">
+      <div class="container">
         <h1 class="hero_title">
           Эффективные решения<br />
           для вашего бизнеса
@@ -47,31 +47,31 @@
     </section>
 
     <section class="section">
-      <div class="container cont_section ">
+      <div class="container">
         <ul class="section_item">
           <li class="section_list">
-            <h3 class="list_title">Внимание к деталям</h3>
+            <h3 class="list_title sputnik ">Внимание к деталям</h3>
             <p class="list_text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li class="section_list">
-            <h3 class="list_title">Пунктуальность</h3>
+            <h3 class="list_title clock">Пунктуальность</h3>
             <p class="list_text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li class="section_list">
-            <h3 class="list_title">Планирование</h3>
+            <h3 class="list_title diagram">Планирование</h3>
             <p class="list_text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li class="section_list">
-            <h3 class="list_title">Современные технологии</h3>
+            <h3 class="list_title astronaut">Современные технологии</h3>
             <p class="list_text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -82,45 +82,56 @@
     </section>
 
     <section class="work">
-      <div class="container cont_work">
+      <div class="container">
         <h2 class="title">Чем мы занимаемся</h2>
         <ul class="work_item">
           <li class="work_list">
-            <a class="work_link" href="#"><img src="./img/box1.png" width="370" alt="программирование" /></a>
+            <a class="work_link" href="#"><img class="work_img" src="./img/box1.png" width="370"
+                alt="программирование" /></a>
           </li>
           <li class="work_list">
-            <a class="work_link" href="#"><img src="./img/box2.png" width="370" alt="тестировщик" /></a>
+            <a class="work_link" href="#"><img class="work_img" src="./img/box2.png" width="370"
+                alt="тестировщик" /></a>
           </li>
           <li class="work_list">
-            <a class="work_link" href="#"><img src="./img/box3.png" width="370" alt="вебдизайнер" /></a>
+            <a class="work_link" href="#"><img class="work_img" src="./img/box3.png" width="370"
+                alt="вебдизайнер" /></a>
           </li>
         </ul>
       </div>
     </section>
 
     <section class="team">
-      <div class="container cont_team">
+      <div class="container">
         <h2 class="title">Наша команда</h2>
         <ul class="team_item">
           <li class="team-list">
             <img class="team_foto" src="./img/foto.jpg" width="270" alt="Игорь Демьяненко" />
-            <h4 class="team_title">Игорь Демьяненко</h4>
-            <p class="team_text">Product Designer</p>
+            <div class="team_name">
+              <h4 class="team_title">Игорь Демьяненко</h4>
+              <p class="team_text">Product Designer</p>
+            </div>
           </li>
           <li class="team-list">
             <img class="team_foto" class="team_img" src="./img/foto1.jpg" width="270" alt="Ольга Репина" />
-            <h4 class="team_title">Ольга Репина</h4>
-            <p class="team_text">Frontend Developer</p>
+            <div>
+              <h4 class="team_title">Ольга Репина</h4>
+              <p class="team_text">Frontend Developer</p>
+            </div>
           </li>
           <li class="team-list">
             <img class="team_foto" class="team_img" src="./img/foto2.jpg" width="270" alt="Николай Тарасов" />
-            <h4 class="team_title">Николай Тарасов</h4>
-            <p class="team_text">Marketing</p>
+            <div>
+              <h4 class="team_title">Николай Тарасов</h4>
+              <p class="team_text">Marketing</p>
+            </div>
           </li>
           <li class="team-list">
             <img class="team_foto" class="team_img" src="./img/foto3.jpg" width="270" alt="Михаил Ермаков" />
-            <h4 class="team_title">Михаил Ермаков</h4>
-            <p class="team_text">UI Designer</p>
+            <div>
+              <h4 class="team_title">Михаил Ермаков</h4>
+              <p class="team_text">UI Designer</p>
+            </div>
           </li>
         </ul>
       </div>
