--- a/portfolio.html
+++ b/portfolio.html
@@ -20,17 +20,17 @@
       <a class="logo" href="./index.html"><span>Web</span>Studio</a>
       <nav class="nav">
         <ul class="nav_item">
-          <li class="nav_list"><a class="nav_link" href="./index.html">Cтудия</a></li>
+          <li class="nav_list"><a class="nav_link" href="./index.html">Студия</a></li>
           <li class="nav_list"><a class="nav_link" href="./portfolio.html">Портфолио</a></li>
           <li class="nav_list"><a class="nav_link" href="#">Контакты</a></li>
         </ul>
       </nav>
       <ul class="social_item">
         <li class="social_list">
-          <a class="nav_social" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li class="social_list">
-        <li>
-          <a class="nav_social" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="nav_social mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li >
+        <li class="social_list">
+          <a class="nav_social tel" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </div>
