--- a/index.html
+++ b/index.html
@@ -27,10 +27,20 @@
       </nav>
       <ul class="social_item">
         <li class="social_list">
-          <a class="nav_social mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="nav_social" href="mailto:info@devstudio.com">
+            <svg class="svg_mail  mail" width="20" height="12">
+              <use href="./img/ikon/symbol-defs.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com
+          </a>
         </li>
         <li class="social_list">
-          <a class="nav_social tel" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="nav_social" href="tel:+380961111111">
+            <svg class="svg_pfone mail" width="10" height="16">
+              <use href="./img/ikon/symbol-defs.svg#icon-smartphone"></use>
+            </svg>
+            +38 096 111 11 11
+          </a>
         </li>
       </ul>
     </div>
@@ -50,6 +60,11 @@
       <div class="container">
         <ul class="section_item">
           <li class="section_list">
+            <div class="section_svg">
+              <svg class="section_icon">
+                <use href="./img/ikon/symbol-defs.svg#icon-antenna-1"></use>
+              </svg>
+            </div>
             <h3 class="list_title sputnik ">Внимание к деталям</h3>
             <p class="list_text">
               Идейные соображения, а также начало повседневной работы по
@@ -57,6 +72,11 @@
             </p>
           </li>
           <li class="section_list">
+            <div class="section_svg">
+              <svg class="section_icon">
+                <use href="./img/ikon/symbol-defs.svg#icon-clock-1"></use>
+              </svg>
+            </div>
             <h3 class="list_title clock">Пунктуальность</h3>
             <p class="list_text">
               Задача организации, в особенности же рамки и место обучения кадров
@@ -64,6 +84,11 @@
             </p>
           </li>
           <li class="section_list">
+            <div class="section_svg">
+              <svg class="section_icon">
+                <use href="./img/ikon/symbol-defs.svg#icon-diagram-1"></use>
+              </svg>
+            </div>
             <h3 class="list_title diagram">Планирование</h3>
             <p class="list_text">
               Равным образом консультация с широким активом в значительной
@@ -71,6 +96,11 @@
             </p>
           </li>
           <li class="section_list">
+            <div class="section_svg">
+              <svg class="section_icon">
+                <use href="./img/ikon/symbol-defs.svg#icon-astronaut-1"></use>
+              </svg>
+            </div>
             <h3 class="list_title astronaut">Современные технологии</h3>
             <p class="list_text">
               Значимость этих проблем настолько очевидна, что реализация
@@ -110,28 +140,186 @@
             <div class="team_name">
               <h4 class="team_title">Игорь Демьяненко</h4>
               <p class="team_text">Product Designer</p>
+              <ul class="team_social_item">
+                <li>
+                  <a class="team_social_link" href="">
+                    <svg class="team_social_svg">
+                      <use href=" ./img/ikon/symbol-defs.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="team_social_link" href="">
+                    <svg class="team_social_svg">
+                      <use href="./img/ikon/symbol-defs.svg#icon-twitter-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="team_social_link" href="">
+                    <svg class="team_social_svg">
+                      <use href="./img/ikon/symbol-defs.svg#icon-facebook-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="team_social_link" href="">
+                    <svg class="team_social_svg">
+                      <use href="./img/ikon/symbol-defs.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-list">
-            <img class="team_foto" class="team_img" src="./img/foto1.jpg" width="270" alt="Ольга Репина" />
-            <div>
+            <img class="team_foto" src="./img/foto1.jpg" width="270" alt="Ольга Репина" />
+            <div class="team_name">
               <h4 class="team_title">Ольга Репина</h4>
               <p class="team_text">Frontend Developer</p>
+              <ul class="team_social_item">
+                <li>
+                  <a class="team_social_link" href="">
+                    <svg class="team_social_svg">
+                      <use href=" ./img/ikon/symbol-defs.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="team_social_link" href="">
+                    <svg class="team_social_svg">
+                      <use href="./img/ikon/symbol-defs.svg#icon-twitter-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="team_social_link" href="">
+                    <svg class="team_social_svg">
+                      <use href="./img/ikon/symbol-defs.svg#icon-facebook-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="team_social_link" href="">
+                    <svg class="team_social_svg">
+                      <use href="./img/ikon/symbol-defs.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-list">
-            <img class="team_foto" class="team_img" src="./img/foto2.jpg" width="270" alt="Николай Тарасов" />
-            <div>
+            <img class="team_foto" src="./img/foto2.jpg" width="270" alt="Николай Тарасов" />
+            <div class="team_name">
               <h4 class="team_title">Николай Тарасов</h4>
               <p class="team_text">Marketing</p>
+              <ul class="team_social_item">
+                <li>
+                  <a class="team_social_link" href="">
+                    <svg class="team_social_svg">
+                      <use href=" ./img/ikon/symbol-defs.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="team_social_link" href="">
+                    <svg class="team_social_svg">
+                      <use href="./img/ikon/symbol-defs.svg#icon-twitter-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="team_social_link" href="">
+                    <svg class="team_social_svg">
+                      <use href="./img/ikon/symbol-defs.svg#icon-facebook-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="team_social_link" href="">
+                    <svg class="team_social_svg">
+                      <use href="./img/ikon/symbol-defs.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-list">
-            <img class="team_foto" class="team_img" src="./img/foto3.jpg" width="270" alt="Михаил Ермаков" />
-            <div>
+            <img class="team_foto" src="./img/foto3.jpg" width="270" alt="Михаил Ермаков" />
+            <div class="team_name">
               <h4 class="team_title">Михаил Ермаков</h4>
               <p class="team_text">UI Designer</p>
+              <ul class="team_social_item">
+                <li>
+                  <a class="team_social_link" href="">
+                    <svg class="team_social_svg">
+                      <use href=" ./img/ikon/symbol-defs.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="team_social_link" href="">
+                    <svg class="team_social_svg">
+                      <use href="./img/ikon/symbol-defs.svg#icon-twitter-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="team_social_link" href="">
+                    <svg class="team_social_svg">
+                      <use href="./img/ikon/symbol-defs.svg#icon-facebook-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="team_social_link" href="">
+                    <svg class="team_social_svg">
+                      <use href="./img/ikon/symbol-defs.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="our_clients">
+      <div class="container">
+        <h2 class="clients_title">Постоянные клиенты</h2>
+        <ul class="clients_item">
+          <li class="clients_list">
+            <svg class="clients_svg">
+              <use href="./img/ikon/symbol-defs.svg#icon-Logo "></use>
+            </svg>
+          </li>
+          <li class="clients_list">
+            <svg class="clients_svg">
+              <use href="./img/ikon/symbol-defs.svg#icon-Logo-1 "></use>
+            </svg>
+          </li>
+          <li class="clients_list">
+            <svg class="clients_svg">
+              <use href="./img/ikon/symbol-defs.svg#icon-Logo-2 "></use>
+            </svg>
+          </li>
+          <li class="clients_list">
+            <svg class="clients_svg">
+              <use href="./img/ikon/symbol-defs.svg#icon-Logo-3 "></use>
+            </svg>
+          </li>
+          <li class="clients_list">
+            <svg class="clients_svg">
+              <use href="./img/ikon/symbol-defs.svg#icon-Logo-4 "></use>
+            </svg>
+          </li>
+          <li class="clients_list">
+            <svg class="clients_svg">
+              <use href="./img/ikon/symbol-defs.svg#icon-Logo-5 "></use>
+            </svg>
           </li>
         </ul>
       </div>
